// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer should render prop placement="left" correctly 1`] = `
<div class="fx-drawer fx-popup" style="z-index: 2000; display: none;">
  <div class="fx-mask"></div>
  <div class="fx-drawer_inner placement--left" style="padding: 0px 0px 0px 0px;">
    <div class="fx-drawer_header fx-horizontal-hairline" style="display: none;">
      <div class="fx-drawer_header-inner">
        <div class="fx-drawer_title"></div>
        <!---->
      </div>
    </div>
    <div class="fx-drawer_body"></div>
  </div>
</div>
`;

exports[`Drawer should render prop showClose=true correctly 1`] = `
<div class="fx-drawer fx-popup" style="z-index: 2000; display: none;">
  <div class="fx-mask"></div>
  <div class="fx-drawer_inner placement--bottom has--header" style="padding: 0px 0px 0px 0px;">
    <div class="fx-drawer_header fx-horizontal-hairline">
      <div class="fx-drawer_header-inner">
        <div class="fx-drawer_title"></div>
        <fx-button-stub pattern="borderless" shape="square" icon="CloseOutlined" class="fx-drawer_close"></fx-button-stub>
      </div>
    </div>
    <div class="fx-drawer_body"></div>
  </div>
</div>
`;

exports[`Drawer should render prop title="Drawer" correctly 1`] = `
<div class="fx-drawer fx-popup" style="z-index: 2000; display: none;">
  <div class="fx-mask"></div>
  <div class="fx-drawer_inner placement--bottom has--header" style="padding: 0px 0px 0px 0px;">
    <div class="fx-drawer_header fx-horizontal-hairline">
      <div class="fx-drawer_header-inner">
        <div class="fx-drawer_title">Drawer</div>
        <!---->
      </div>
    </div>
    <div class="fx-drawer_body"></div>
  </div>
</div>
`;
